androidx migrated for taget SDK version 28
AndroidX migration is done for sdk version 28.

--- a/app/src/main/res/layout-land/activity_camera.xml
+++ b/app/src/main/res/layout-land/activity_camera.xml
@@ -20,7 +20,7 @@
         app:aspectRatio="4:3"
         app:facing="back" />
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="wrap_content"
         android:layout_height="?attr/actionBarSize"
@@ -28,7 +28,7 @@
         android:layout_alignRight="@id/camera_surface_CameraView"
         android:layout_alignParentTop="true" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
