--- a/app/src/main/res/layout/card_doctor_content.xml
+++ b/app/src/main/res/layout/card_doctor_content.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/padding_visit_summary_screen"
     android:paddingRight="@dimen/padding_visit_summary_screen">
 
-    <android.support.v7.widget.CardView 
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardview_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,5 +41,5 @@
         </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
