--- a/app/src/main/res/layout/list_item_additional_doc.xml
+++ b/app/src/main/res/layout/list_item_additional_doc.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cardview_home"
     android:layout_width="match_parent"
@@ -54,4 +54,4 @@
     </LinearLayout>
 
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
