--- a/app/src/main/res/layout/ppe_request_alert.xml
+++ b/app/src/main/res/layout/ppe_request_alert.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="center_horizontal"
         android:fontFamily="@font/lato_bold"/>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
@@ -35,9 +35,9 @@
             android:singleLine="true"
             android:textSize="14sp"
             android:fontFamily="@font/lato_regular"/>
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
@@ -54,8 +54,8 @@
             android:singleLine="true"
             android:textSize="14sp"
             android:fontFamily="@font/lato_regular"/>
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
@@ -72,9 +72,9 @@
             android:singleLine="true"
             android:textSize="14sp"
             android:fontFamily="@font/lato_regular"/>
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
@@ -91,9 +91,9 @@
             android:singleLine="true"
             android:textSize="14sp"
             android:fontFamily="@font/lato_regular"/>
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
@@ -112,7 +112,7 @@
             android:singleLine="true"
             android:textSize="14sp"
             android:fontFamily="@font/lato_regular"/>
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
     <RelativeLayout
