--- a/app/src/main/res/layout/activity_patient_detail.xml
+++ b/app/src/main/res/layout/activity_patient_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -9,12 +9,12 @@
 
     tools:context=".activities.patientDetailActivity.PatientDetailActivity">
 
-        <android.support.design.widget.AppBarLayout
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.design.widget.CollapsingToolbarLayout
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="300dp"
@@ -33,7 +33,7 @@
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0.7" />
 
-                <android.support.v7.widget.Toolbar
+                <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
@@ -41,11 +41,11 @@
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            </android.support.design.widget.CollapsingToolbarLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        </android.support.design.widget.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-        <android.support.v4.widget.NestedScrollView
+        <androidx.core.widget.NestedScrollView
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
                 android:paddingRight="@dimen/padding_visit_summary_screen">
 
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/cardView_patDetail_summary"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -144,7 +144,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -171,7 +171,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -199,7 +199,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -226,7 +226,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -255,7 +255,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -282,7 +282,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -309,7 +309,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -336,7 +336,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -366,7 +366,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -395,7 +395,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -423,7 +423,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -451,7 +451,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -479,7 +479,7 @@
                                     android:paddingTop="@dimen/padding_card_action"
                                     android:textSize="@dimen/card_content_text_size" />
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -490,9 +490,9 @@
 
 
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/cardView_history"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -539,7 +539,7 @@
                                     android:textSize="@dimen/card_content_text_size" />
 
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -567,7 +567,7 @@
                                     android:textSize="@dimen/card_content_text_size" />
 
 
-                                <android.support.v4.widget.Space
+                                <androidx.legacy.widget.Space
                                     android:layout_width="10dp"
                                     android:layout_height="wrap_content" />
 
@@ -588,7 +588,7 @@
 
 
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <Button
                     android:id="@+id/button_new_visit"
@@ -602,7 +602,7 @@
                     android:foreground="?android:attr/selectableItemBackground"
                     android:text="@string/button_new_visit" />
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/cardView_previous_visits"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -644,13 +644,13 @@
 
 
                     </LinearLayout>
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
 
             </LinearLayout>
 
 
-        </android.support.v4.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
 
 
         <!--<include layout="@layout/content_patient_detail" />-->
@@ -663,4 +663,4 @@
         <!--android:layout_margin="@dimen/fab_margin"-->
         <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->
 
-    </android.support.design.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
