--- a/app/src/main/res/layout/content_additional_documents.xml
+++ b/app/src/main/res/layout/content_additional_documents.xml
@@ -8,11 +8,11 @@
     tools:context="io.intelehealth.client.activities.family_history_activity.FamilyHistoryActivity"
     tools:showIn="@layout/activity_family_history">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/document_RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </RelativeLayout>
