--- a/app/src/main/res/layout/fragment_physical_exam.xml
+++ b/app/src/main/res/layout/fragment_physical_exam.xml
@@ -26,7 +26,7 @@
         />
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
@@ -53,7 +53,7 @@
 
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 
